--- a/colorGuessGame.html
+++ b/colorGuessGame.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 
+	<h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
+
 	<div id="container">
 		<div class="square"></div>
 		<div class="square"></div>
@@ -15,5 +17,6 @@
 		<div class="square"></div>
 	</div>
 
+<script type="text/javascript" src="colorGuessGame.js"></script>
 </body>
 </html>
